app/src/style.css
/*@media (prefers-color-scheme: dark) {
    :root {
        --bg-color: #10151a;
        --text-color: #f4f4f4;
    }
}*/

:root {
    --bg-color: #fefefe;
    --text-color: #000;
    --spacing: 0.5rem;
    --border-color: #ddd;
}

body {
    font-family: "Inter Variable", system-ui, sans-serif;
    font-weight: 400;
    font-size: 16px;

    background-color: var(--bg-color);
    backdrop-filter: brightness(0.98);
    color: var(--text-color);

    padding: 0;
    margin: 0;
}

#app {
    display: grid;
    grid-template-columns: 300px 1fr;

    height: 100vh;
    overflow: none;
}

.sidebar {
    display: flex;
    flex-direction: column;
    gap: 0.25rem;

    color: #111;
    border-right: 1px solid var(--border-color);
    font-size: 0.875rem;
    padding: 0.5rem 0.75rem;

    & > ul {
        list-style: none;
        padding: 0;
        margin: 0;
    }
}

#workspace {
    display: flex;
    gap: 0.125rem;
    padding: 0.75rem 0.5rem;

    color: var(--text-color);
    font-weight: 500;
}

#files {
    display: flex;
    flex-direction: column;
    gap: 0.125rem;

    & > li {
        display: flex;

        flex-direction: column;
        height: 32px;
        justify-content: center;

        padding-inline: 1rem;
        border-radius: 6px;

        &[data-active] {
            background-color: rgba(0, 0, 0, 0.07);
        }
    }
}

.main {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    overflow: auto;

    background-color: var(--bg-color);

    & > #page-header {
        width: 100%;
        display: flex;
        align-items: center;

        position: sticky;
        top: 0;

        padding: 1rem 1.5rem;
        gap: 0.5rem;
        justify-content: space-between;

        background-color: color-mix(in srgb, var(--bg-color) 60%, transparent);
        backdrop-filter: blur(16px);
        border-bottom: 1px solid var(--border-color);
        box-sizing: border-box;
    }

    & > #page {
        width: min(800px, 100%);

        padding: 2rem 1.5rem;
        margin-inline: auto;
    }
}

.title {
    color: #000;
    font-weight: 500;
}

.muted {
    color: #333;
}

strong {
    font-weight: 500;
}

[contenteditable="true"] {
    outline: none;
}

